# model_based_curation

./: .gitignore  README.md  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini
configs/: curation_config_europarl.yaml  filter_config_europarl.yaml  filter_config_newscommentary.yaml  filter_config_tedtalks.yaml  split_config_europarl.yaml  split_config_newscommentary.yaml  split_config_tedtalks.yaml
notebooks/: curate.ipynb  split.ipynb
scripts/: _bootstrap.py  curate.py  filter.py  split.py
src/model_based_curation/: __init__.py  api.py  batch_seq2seq_loss_scorer.py  collate.py  config.py  loss_buckets.py  loss_buckets_streaming.py  seq2seq_loss_scorer.py  splitter.py
src/model_based_curation/filter/: __init__.py  filter.py
src/model_based_curation/internal/: __init__.py  batch_seq2seq_loss_scorer.py
src/model_based_curation/split/: __init__.py  batch_seq2seq_loss_scorer.py  collate.py  splitter.py
tests/: __init__.py  test_api.py  test_batch_seq2seq_loss_scorer.py  test_collate.py  test_config.py  test_filter_api.py  test_filter_config.py  test_loss_buckets.py  test_loss_buckets_batched.py  test_seq2seq_loss_scorer.py  test_split_config.py  test_splitter.py
tests/filter/: __init__.py  test_filter.py
tests/internal/: __init__.py  test_batch_seq2seq_loss_scorer.py  test_collate.py  test_splitter.py
tests/split/: __init__.py  test_batch_seq2seq_loss_scorer.py  test_collate.py  test_splitter.py
